--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -190,6 +190,20 @@ vertex(338, 433.1875);
 vertex(339, 427.1875);
 vertex(342, 431.1875);
 endShape(CLOSE);
+          beginShape();
+vertex(416, 352.1875);
+vertex(405, 356.1875);
+vertex(401, 364.1875);
+vertex(401, 375.1875);
+vertex(404, 387.1875);
+vertex(411, 392.1875);
+vertex(424, 393.1875);
+vertex(429, 386.1875);
+vertex(432, 376.1875);
+vertex(432, 364.1875);
+vertex(426, 353.1875);
+vertex(419, 353.1875);
+endShape(CLOSE);
           fill(102,51,0);
           beginShape();//pelo derecho
 vertex(465, 355.1875);
@@ -376,20 +390,7 @@ vertex(549, 353.1875);
 vertex(530, 394.1875);
 vertex(505, 359.1875);
 endShape();
-          fill(0,0,0);
-           beginShape();
-vertex(416, 391.1875);
-vertex(407, 401.1875);
-vertex(404, 409.1875);
-vertex(405, 419.1875);
-vertex(413, 422.1875);
-vertex(424, 423.1875);
-vertex(430, 415.1875);
-vertex(430, 405.1875);
-vertex(427, 398.1875);
-vertex(422, 393.1875);
-vertex(419, 387.1875);
-endShape(CLOSE);
+          
           break;
         case 'sad':
          stroke(0,0,0)
@@ -411,21 +412,6 @@ vertex(317, 448.1875);
 vertex(299, 379.1875);
 vertex(285, 327.1875);
 vertex(385, 291.1875);
-endShape(CLOSE);
-          fill(255,255,255);
-          beginShape();
-vertex(416, 352.1875);
-vertex(405, 356.1875);
-vertex(401, 364.1875);
-vertex(401, 375.1875);
-vertex(404, 387.1875);
-vertex(411, 392.1875);
-vertex(424, 393.1875);
-vertex(429, 386.1875);
-vertex(432, 376.1875);
-vertex(432, 364.1875);
-vertex(426, 353.1875);
-vertex(419, 353.1875);
 endShape(CLOSE);
           fill(0,0,0);
           beginShape();//boca
@@ -592,6 +578,20 @@ vertex(464, 355.1875);
 vertex(494, 397.1875);
 vertex(443, 481.1875);
 endShape();
+          fill(100, 183, 252);
+          beginShape();
+vertex(416, 391.1875);
+vertex(407, 401.1875);
+vertex(404, 409.1875);
+vertex(405, 419.1875);
+vertex(413, 422.1875);
+vertex(424, 423.1875);
+vertex(430, 415.1875);
+vertex(430, 405.1875);
+vertex(427, 398.1875);
+vertex(422, 393.1875);
+vertex(419, 387.1875);
+endShape(CLOSE);
          
           break;
 
