--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -190,20 +190,19 @@ vertex(338, 433.1875);
 vertex(339, 427.1875);
 vertex(342, 431.1875);
 endShape(CLOSE);
-          beginShape();
-vertex(416, 352.1875);
-vertex(405, 356.1875);
-vertex(401, 364.1875);
-vertex(401, 375.1875);
-vertex(404, 387.1875);
-vertex(411, 392.1875);
-vertex(424, 393.1875);
-vertex(429, 386.1875);
-vertex(432, 376.1875);
-vertex(432, 364.1875);
-vertex(426, 353.1875);
-vertex(419, 353.1875);
-endShape(CLOSE);
+          beginShape();//ojo
+vertex(411, 353.1875);
+vertex(404, 359.1875);
+vertex(400, 368.1875);
+vertex(399, 377.1875);
+vertex(400, 387.1875);
+vertex(404, 397.1875);
+vertex(411, 402.1875);
+vertex(417, 398.1875);
+vertex(420, 388.1875);
+vertex(421, 371.1875);
+vertex(419, 359.1875);
+endShape();
           fill(102,51,0);
           beginShape();//pelo derecho
 vertex(465, 355.1875);
