--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -202,7 +202,7 @@ vertex(417, 398.1875);
 vertex(420, 388.1875);
 vertex(421, 371.1875);
 vertex(419, 359.1875);
-endShape();
+endShape(CLOSE);
           fill(102,51,0);
           beginShape();//pelo derecho
 vertex(465, 355.1875);
