--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -203,6 +203,20 @@ vertex(420, 388.1875);
 vertex(421, 371.1875);
 vertex(419, 359.1875);
 endShape(CLOSE);
+          beginShape();
+vertex(336, 355.1875);
+vertex(329, 362.1875);
+vertex(327, 374.1875);
+vertex(329, 386.1875);
+vertex(333, 397.1875);
+vertex(341, 403.1875);
+vertex(348, 400.1875);
+vertex(351, 387.1875);
+vertex(351, 376.1875);
+vertex(351, 364.1875);
+vertex(348, 358.1875);
+vertex(339, 354.1875);
+endShape(CLOSE);
           fill(102,51,0);
           beginShape();//pelo derecho
 vertex(465, 355.1875);
