--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -426,7 +426,8 @@ vertex(299, 379.1875);
 vertex(285, 327.1875);
 vertex(385, 291.1875);
 endShape(CLOSE);
-          fill(0,0,0);
+         noFill();
+          stroke(0,0,0);
           beginShape();//boca
 vertex(340, 476.1875);
 vertex(345, 462.1875);
@@ -668,7 +669,8 @@ vertex(387, 443.1875);
 vertex(376, 444.1875);
 vertex(366, 446.1875);
 endShape();
-  
+  noFill();
+          stroke(0,0,0);
           beginShape();//ojo
 vertex(395, 381.1875);
 vertex(401, 376.1875);
