--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -428,23 +428,21 @@ vertex(385, 291.1875);
 endShape(CLOSE);
          noFill();
           stroke(0,0,0);
-          beginShape();//boca
-vertex(340, 476.1875);
-vertex(345, 462.1875);
-vertex(355, 453.1875);
-vertex(369, 448.1875);
-vertex(384, 449.1875);
-vertex(395, 456.1875);
-vertex(401, 465.1875);
-vertex(409, 481.1875);
-vertex(401, 476.1875);
-vertex(391, 469.1875);
-vertex(377, 462.1875);
-vertex(367, 463.1875);
-vertex(358, 469.1875);
-vertex(353, 472.1875);
-vertex(341, 481.1875);     
-endShape(CLOSE);
+          beginShape();
+vertex(346, 486.1875);
+vertex(346, 474.1875);
+vertex(348, 464.1875);
+vertex(353, 456.1875);
+vertex(360, 453.1875);
+vertex(369, 453.1875);
+vertex(374, 453.1875);
+vertex(383, 453.1875);
+vertex(392, 455.1875);
+vertex(399, 462.1875);
+vertex(401, 471.1875);
+vertex(402, 480.1875);
+vertex(402, 490.1875);
+endShape();
   
           beginShape();//ojo
 vertex(395, 381.1875);
