--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -907,23 +907,38 @@ endShape(CLOSE);
           noFill();
           stroke(0,0,0)
           beginShape();//boca
-beginShape();
 vertex(339, 471.1875);
 vertex(354, 463.1875);
 vertex(375, 460.1875);
 vertex(393, 461.1875);
 vertex(410, 469.1875);
 endShape();
-  
-          beginShape();//ojo
-beginShape();
-vertex(394, 366.1875);
-vertex(443, 367.1875);
-endShape();   
-          beginShape();//ojo
-beginShape();
-vertex(359, 366.1875);
-vertex(311, 366.1875);
+  beginShape();//ojo
+         vertex(357, 380.1875);
+vertex(357, 380.1875);
+vertex(347, 372.1875);
+vertex(337, 369.1875);
+vertex(327, 370.1875);
+vertex(321, 373.1875);
+vertex(315, 380.1875);
+endShape(); 
+
+ beginShape();//ojo
+vertex(395, 381.1875);
+vertex(401, 376.1875);
+vertex(410, 372.1875);
+vertex(418, 372.1875);
+vertex(424, 372.1875);
+vertex(430, 375.1875);
+vertex(433, 379.1875);
+endShape(); 
+          beginShape();//ceja
+vertex(396, 324.1875);
+vertex(442, 339.1875);
+endShape();
+          beginShape();//ceja
+vertex(354, 325.1875);
+vertex(314, 338.1875);
 endShape();
           fill(102,51,0);
           beginShape();//pelo derecho
