--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -913,25 +913,36 @@ vertex(375, 460.1875);
 vertex(393, 461.1875);
 vertex(410, 469.1875);
 endShape();
+          fill(0,0,0);
   beginShape();//ojo
-         vertex(357, 380.1875);
-vertex(357, 380.1875);
-vertex(347, 372.1875);
-vertex(337, 369.1875);
-vertex(327, 370.1875);
-vertex(321, 373.1875);
-vertex(315, 380.1875);
-endShape(); 
+vertex(420, 355.1875);
+vertex(407, 362.1875);
+vertex(401, 372.1875);
+vertex(403, 385.1875);
+vertex(410, 393.1875);
+vertex(421, 393.1875);
+vertex(432, 391.1875);
+vertex(437, 378.1875);
+vertex(436, 364.1875);
+vertex(429, 359.1875);
+vertex(422, 355.1875);
+endShape();
 
  beginShape();//ojo
-vertex(395, 381.1875);
-vertex(401, 376.1875);
-vertex(410, 372.1875);
-vertex(418, 372.1875);
-vertex(424, 372.1875);
-vertex(430, 375.1875);
-vertex(433, 379.1875);
-endShape(); 
+vertex(349, 371.1875);
+vertex(341, 360.1875);
+vertex(328, 358.1875);
+vertex(317, 362.1875);
+vertex(312, 371.1875);
+vertex(313, 380.1875);
+vertex(318, 389.1875);
+vertex(326, 390.1875);
+vertex(336, 389.1875);
+vertex(342, 389.1875);
+vertex(349, 379.1875);
+endShape();
+          noFill();
+          stroke(0,0,0);
           beginShape();//ceja
 vertex(396, 324.1875);
 vertex(442, 339.1875);
