--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -904,16 +904,22 @@ vertex(299, 379.1875);
 vertex(285, 327.1875);
 vertex(385, 291.1875);
 endShape(CLOSE);
-          noFill();
-          stroke(0,0,0)
+          
           beginShape();//boca
-vertex(339, 471.1875);
-vertex(354, 463.1875);
-vertex(375, 460.1875);
-vertex(393, 461.1875);
-vertex(410, 469.1875);
+vertex(365, 454.1875);
+vertex(353, 456.1875);
+vertex(341, 462.1875);
+vertex(340, 474.1875);
+vertex(347, 479.1875);
+vertex(356, 479.1875);
+vertex(374, 479.1875);
+vertex(386, 479.1875);
+vertex(399, 477.1875);
+vertex(403, 466.1875);
+vertex(394, 454.1875);
+vertex(380, 453.1875);
 endShape();
-          fill(0,0,0);
+         
   beginShape();//ojo
 vertex(420, 355.1875);
 vertex(407, 362.1875);
@@ -926,7 +932,7 @@ vertex(437, 378.1875);
 vertex(436, 364.1875);
 vertex(429, 359.1875);
 vertex(422, 355.1875);
-endShape();
+endShape(CLOSE);
 
  beginShape();//ojo
 vertex(349, 371.1875);
@@ -940,7 +946,7 @@ vertex(326, 390.1875);
 vertex(336, 389.1875);
 vertex(342, 389.1875);
 vertex(349, 379.1875);
-endShape();
+endShape(CLOSE);
           noFill();
           stroke(0,0,0);
           beginShape();//ceja
