--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -904,7 +904,7 @@ vertex(299, 379.1875);
 vertex(285, 327.1875);
 vertex(385, 291.1875);
 endShape(CLOSE);
-          
+          fill(0,0,0);
           beginShape();//boca
 vertex(365, 454.1875);
 vertex(353, 456.1875);
