--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -918,7 +918,7 @@ vertex(399, 477.1875);
 vertex(403, 466.1875);
 vertex(394, 454.1875);
 vertex(380, 453.1875);
-endShape();
+endShape(CLOSE);
          
   beginShape();//ojo
 vertex(420, 355.1875);
