--- a/artperlacara/index.html
+++ b/artperlacara/index.html
@@ -1107,16 +1107,235 @@ endShape();
           break;
 
         case 'surprised':
-          stroke(0,150,255,150); // blau clar
+           stroke(0,0,0)
+          fill(235,223,164);
+        beginShape();//cap
+vertex(387, 291.1875);
+vertex(409, 298.1875);
+vertex(438, 308.1875);
+vertex(463, 315.1875);
+vertex(476, 320.1875);
+vertex(468, 342.1875);
+vertex(463, 359.1875);
+vertex(434, 445.1875);
+vertex(419, 489.1875);
+vertex(407, 525.1875);
+vertex(338, 527.1875);
+vertex(317, 448.1875);
+vertex(317, 448.1875);
+vertex(299, 379.1875);
+vertex(285, 327.1875);
+vertex(385, 291.1875);
+endShape(CLOSE);
+          fill(0,0,0);
+         beginShape();//boca
+vertex(371, 434.1875);
+vertex(364, 439.1875);
+vertex(361, 447.1875);
+vertex(359, 455.1875);
+vertex(358, 464.1875);
+vertex(358, 473.1875);
+vertex(359, 479.1875);
+vertex(362, 487.1875);
+vertex(366, 495.1875);
+vertex(371, 498.1875);
+vertex(377, 494.1875);
+vertex(382, 484.1875);
+vertex(384, 474.1875);
+vertex(385, 458.1875);
+vertex(383, 449.1875);
+vertex(377, 438.1875);
+endShape(CLOSE);
+          beginShape();//ojo
+vertex(411, 353.1875);
+vertex(404, 359.1875);
+vertex(400, 368.1875);
+vertex(399, 377.1875);
+vertex(400, 387.1875);
+vertex(404, 397.1875);
+vertex(411, 402.1875);
+vertex(417, 398.1875);
+vertex(420, 388.1875);
+vertex(421, 371.1875);
+vertex(419, 359.1875);
+endShape(CLOSE);
           beginShape();
-          for (let i = 0; i < 20; i++) {
-            let angle = random(TWO_PI);
-            let r = 50 + 100 * intensity;
-            let x = VIRTUAL_W/2 + r * cos(angle);
-            let y = VIRTUAL_H/2 + r * sin(angle);
-            vertex(x, y);
-          }
-          endShape(CLOSE);
+vertex(336, 355.1875);
+vertex(329, 362.1875);
+vertex(327, 374.1875);
+vertex(329, 386.1875);
+vertex(333, 397.1875);
+vertex(341, 403.1875);
+vertex(348, 400.1875);
+vertex(351, 387.1875);
+vertex(351, 376.1875);
+vertex(351, 364.1875);
+vertex(348, 358.1875);
+vertex(339, 354.1875);
+endShape(CLOSE);
+          fill(102,51,0);
+          beginShape();//pelo derecho
+vertex(465, 355.1875);
+vertex(472, 366.1875);
+vertex(487, 386.1875);
+vertex(495, 397.1875);
+vertex(477, 423.1875);
+vertex(437, 485.1875);
+vertex(442, 512.1875);
+vertex(452, 557.1875);
+vertex(454, 571.1875);
+vertex(448, 575.1875);
+vertex(439, 564.1875);
+vertex(424, 537.1875);
+vertex(412, 515.1875);
+vertex(463, 355.1875);
+endShape(CLOSE);
+          beginShape();//pelo izquierdo
+vertex(291, 352.1875);
+vertex(314, 435.1875);
+vertex(333, 507.1875);
+vertex(290, 575.1875);
+vertex(284, 575.1875);
+vertex(287, 496.1875);
+vertex(287, 496.1875);
+vertex(239, 406.1875);
+vertex(288, 353.1875);
+vertex(292, 350.1875);
+endShape(CLOSE);
+          beginShape();//barba
+vertex(339, 528.1875);
+vertex(401, 527.1875);
+vertex(366, 626.1875);
+vertex(340, 530.1875);
+endShape(CLOSE);
+          fill(0,0,0);
+          beginShape();//cos
+vertex(289, 497.1875);
+vertex(241, 495.1875);
+vertex(241, 495.1875);
+vertex(159, 595.1875);
+vertex(118, 672.1875);
+vertex(144, 725.1875);
+vertex(177, 760.1875);
+vertex(219, 799.1875);
+vertex(234, 809.1875);
+vertex(243, 818.1875);
+vertex(250, 786.1875);
+vertex(255, 750.1875);
+vertex(230, 730.1875);
+vertex(230, 730.1875);
+vertex(196, 696.1875);
+vertex(187, 669.1875);
+vertex(229, 611.1875);
+vertex(246, 593.1875);
+vertex(241, 736.1875);
+vertex(254, 750.1875);
+vertex(251, 786.1875);
+vertex(242, 821.1875);
+vertex(234, 810.1875);
+vertex(216, 920.1875);
+vertex(422, 915.1875);
+vertex(490, 795.1875);
+vertex(505, 598.1875);
+vertex(453, 547.1875);
+vertex(454, 569.1875);
+vertex(449, 575.1875);
+vertex(411, 514.1875);
+vertex(407, 523.1875);
+vertex(403, 527.1875);
+vertex(366, 626.1875);
+vertex(339, 527.1875);
+vertex(332, 509.1875);
+vertex(287, 576.1875);
+vertex(289, 497.1875);
+endShape(CLOSE);
+          fill(255,255,255);
+          beginShape();//fondo
+vertex(690, 741.1875);
+vertex(445, 529.1875);
+vertex(449, 547.1875);
+vertex(505, 599.1875);
+vertex(491, 793.1875);
+vertex(421, 918.1875);
+vertex(691, 920.1875);
+vertex(691, 920.1875);
+vertex(690, 744.1875);
+vertex(691, 682.1875);
+vertex(443, 483.1875);
+vertex(447, 530.1875);
+vertex(449, 546.1875);
+vertex(505, 597.1875);
+vertex(490, 794.1875);
+vertex(473, 827.1875);
+vertex(547, 918.1875);
+vertex(690, 921.1875);
+vertex(690, 682.1875);
+vertex(690, 682.1875);
+vertex(691, 2.1875);
+vertex(0, 0.1875);
+vertex(0, 142.1875);
+vertex(207, 71.1875);
+vertex(431, 142.1875);
+vertex(689, 56.1875);
+vertex(688, 146.1875);
+vertex(1, 144.1875);
+vertex(31, 171.1875);
+vertex(31, 161.1875);
+vertex(61, 160.1875);
+vertex(62, 177.1875);
+vertex(77, 198.1875);
+vertex(97, 211.1875);
+vertex(117, 214.1875);
+vertex(136, 214.1875);
+vertex(154, 216.1875);
+vertex(149, 245.1875);
+vertex(179, 268.1875);
+vertex(501, 149.1875);
+vertex(178, 265.1875);
+vertex(287, 354.1875);
+vertex(263, 378.1875);
+vertex(142, 281.1875);
+vertex(149, 248.1875);
+vertex(116, 444.1875);
+vertex(91, 218.1875);
+vertex(75, 211.1875);
+vertex(56, 383.1875);
+vertex(22, 205.1875);
+vertex(74, 203.1875);
+vertex(48, 188.1875);
+vertex(33, 188.1875);
+vertex(33, 179.1875);
+vertex(2, 143.1875);
+vertex(1, 247.1875);
+vertex(36, 288.1875);
+vertex(52, 381.1875);
+vertex(67, 330.1875);
+vertex(105, 377.1875);
+vertex(117, 445.1875);
+vertex(111, 442.1875);
+vertex(124, 400.1875);
+vertex(140, 280.1875);
+vertex(157, 215.1875);
+vertex(135, 199.1875);
+vertex(137, 175.1875);
+vertex(107, 175.1875);
+vertex(107, 198.1875);
+vertex(133, 198.1875);
+vertex(152, 213.1875);
+vertex(123, 400.1875);
+vertex(233, 529.1875);
+vertex(242, 495.1875);
+vertex(281, 496.1875);
+vertex(237, 405.1875);
+vertex(260, 378.1875);
+vertex(291, 354.1875);
+vertex(287, 327.1875);
+vertex(385, 290.1875);
+vertex(476, 321.1875);
+vertex(464, 355.1875);
+vertex(494, 397.1875);
+vertex(443, 481.1875);
+endShape();
           break;
 
         case 'disgusted':
