--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                         <a class="dropdown-item" href="https://annaadpp.github.io/moonmusic">Moon music</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/martorell">Dades 2020 Martorell</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/mataro">Dades 2024  Matarò</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/artperlacara">Art Per La Cara</a>
                     </div>
                 </li>
                <li class="nav-item dropdown">
