--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                         <a class="dropdown-item" href="https://annaadpp.github.io/martorell">Dades 2020 Martorell</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/mataro">Dades 2024  Matarò</a>
                          <a class="dropdown-item" href="https://annaadpp.github.io/artperlacara">Art Per La Cara</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/pivot">Pivot</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/video">Video</a>
                     </div>
                 </li>
                <li class="nav-item dropdown">
