--- a/aliment/index.html
+++ b/aliment/index.html
@@ -70,9 +70,14 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Projectes</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                         <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/coldplay">Coldplay</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/moonmusic">Moon music</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/martorell">Dades 2020 Martorell</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/mataro">Dades 2024  Matarò</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/artperlacara">Art Per La Cara</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/pivot">Pivot</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/video">Video</a>
                     </div>
                 </li>
                 <li class="nav-item">
