--- a/coldplay/index.html
+++ b/coldplay/index.html
@@ -73,6 +73,11 @@
                          <a class="dropdown-item" href="https://annaadpp.github.io/aliment">Conventional o Ecològic? 1</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/coldplay">Coldplay</a>
                         <a class="dropdown-item" href="https://annaadpp.github.io/moonmusic">Moon music</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/martorell">Dades 2020 Martorell</a>
+                        <a class="dropdown-item" href="https://annaadpp.github.io/mataro">Dades 2024  Matarò</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/artperlacara">Art Per La Cara</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/pivot">Pivot</a>
+                         <a class="dropdown-item" href="https://annaadpp.github.io/video">Video</a>
                     </div>
                 </li>
                 <li class="nav-item">
